# Yap

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  TEST-NOTES.md  TESTING.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  nightly.yml  release.yml
docs/: SIGNING.md  competitive-analysis.md  demo-script.md  fuzzy-dictionary.md  local-api.md  openwhispr-parity.md  openwhispr-teardown.md  settings-redesign-handoff.md
scripts/: demo-take.ps1  dev.bat  record-demo.ps1
src/: App.svelte  app.css  main.js
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json  tauri.nightly.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsi
src-tauri/src/: agent_detect.rs  bridge.rs  chats.rs  commands.rs  config.rs  fuzzy.rs  history.rs  input_hook.rs  lib.rs  llm.rs  local_llm.rs  main.rs  media.rs  meeting.rs  mute.rs  notes.rs  overlay.rs  partials.rs  pipeline.rs  portable.rs  selection.rs  sound.rs  stt.rs  text_injector.rs  tools.rs  tray.rs  usage.rs
src/lib/: ActionManager.svelte  ChatConfig.svelte  ChatView.svelte  ComingSoonView.svelte  ControlPanel.svelte  DictionaryView.svelte  HomeView.svelte  InsightsView.svelte  IntegrationsView.svelte  ModelCard.svelte  ModelManager.svelte  ModelRow.svelte  NoteFormattingConfig.svelte  NotesView.svelte  Onboarding.svelte  Overlay.svelte  Pill.svelte  PromptStudio.svelte  ScopeProviderConfig.svelte  Settings.svelte  StatusBar.svelte  UploadView.svelte  VoiceAgentConfig.svelte  attention.svelte.js  externalLinks.js  hotkeys.js  markdown.js  modelStore.svelte.js  models.js  ppModels.js  providerIcons.js
src/lib/ui/: Button.svelte  Group.svelte  HotkeyInput.svelte  Input.svelte  ModeSelector.svelte  PillTabs.svelte  Row.svelte  Segmented.svelte  Select.svelte  SelectList.svelte  Slider.svelte  Textarea.svelte  ToastHost.svelte  Toggle.svelte  Tooltip.svelte  toast.svelte.js
