[package]
name = "yap"
version = "0.1.0"
description = "Yap — a tiny local voice dictation pill"
license = "MIT"
authors = [""]
edition = "2021"

[lib]
name = "yap_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
once_cell = "1"

# Audio capture + sound cue
cpal = "0.15"
rodio = "0.19"

# Clipboard for text injection
arboard = "3"

# Model download + directory-model extract/verify (used by stt.rs)
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"

# Multi-engine STT (whisper.cpp + ONNX) via transcribe-rs. Optional so the
# default build ships the STUB and `cargo check` stays fast.
transcribe-rs = { version = "0.3", optional = true, default-features = false }

# Auto-update via GitHub Releases (+ process for relaunch after install).
# Desktop-only crates, so they live under a non-mobile target block.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Windows UI Automation — read the focused control's text selection for
# edit/rewrite mode. Version matches the `windows` crate tauri 2 already pulls
# in (0.61.x) so there's no duplicate copy of the crate.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_UI_Accessibility", "Win32_System_Com", "Win32_Foundation"] }

[features]
# Default has NO transcribe-rs so plain `cargo check` compiles the stub (fast).
default = []
# Real multi-engine STT: whisper.cpp (CPU) + ONNX Runtime (DirectML on Windows).
# Use this on machines without CUDA.
engines = ["dep:transcribe-rs", "transcribe-rs/onnx", "transcribe-rs/whisper-cpp", "transcribe-rs/ort-directml"]
# Adds CUDA acceleration for whisper (ONNX still runs on DirectML).
cuda = ["engines", "transcribe-rs/whisper-cuda"]
# Back-compat alias: `whisper` == real engines without CUDA.
whisper = ["engines"]
# REQUIRED for release/standalone builds: makes the app load the EMBEDDED
# frontend via the custom protocol instead of the dev-server URL. Without it
# a `cargo build --release` run still points at http://localhost:1430.
# `tauri build` enables this automatically; bare `cargo build` does not.
custom-protocol = ["tauri/custom-protocol"]
