[package]
name = "yap"
version = "0.1.0"
description = "Yap — a tiny local voice dictation pill"
license = "MIT"
authors = [""]
edition = "2021"

[lib]
name = "yap_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# Audio-file decode for Upload (media.rs): pure-Rust, no ffmpeg. Defaults give
# wav/flac/ogg-vorbis/pcm; mp3 + aac + isomp4 add mp3/m4a/aac.
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
tracing = "0.1"
# env-filter for RUST_LOG; the reload module (Debug-mode live toggle) comes
# with the default "registry"/"std" features — no extra flag.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Rolling FILE log so installed (windowed) builds are debuggable — stdout is
# invisible without a console attached.
tracing-appender = "0.2"
regex = "1"
once_cell = "1"

# Audio capture + sound cue
cpal = "0.15"
rodio = "0.19"

# Clipboard for text injection
arboard = "3"

# Model download + directory-model extract/verify (used by stt.rs)
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"

# Multi-engine STT (whisper.cpp + ONNX) via transcribe-rs. Optional so the
# default build ships the STUB and `cargo check` stays fast.
transcribe-rs = { version = "0.3", optional = true, default-features = false }

# Auto-update via GitHub Releases (+ process for relaunch after install).
# Desktop-only crates, so they live under a non-mobile target block.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Windows UI Automation — read the focused control's text selection for
# edit/rewrite mode. Version matches the `windows` crate tauri 2 already pulls
# in (0.61.x) so there's no duplicate copy of the crate.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_UI_Accessibility", "Win32_System_Com", "Win32_Foundation", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints"] }

[features]
# Default has NO transcribe-rs so plain `cargo check` compiles the stub (fast).
default = []
# Real multi-engine STT with UNIVERSAL GPU acceleration (any Windows GPU, no CUDA):
#   - whisper.cpp on the VULKAN backend (NVIDIA/AMD/Intel; vulkan-1.dll ships with
#     the GPU driver, and it falls back to CPU when no Vulkan device is present)
#   - ONNX Runtime on DirectML (Parakeet/Moonshine/etc.)
# Mirrors Handy's Windows target. Requires the Vulkan SDK at BUILD time (glslc +
# headers + loader); CI installs it via humbletim/install-vulkan-sdk. This is what
# release/nightly builds use — one small installer, GPU on every GPU.
engines = [
    "dep:transcribe-rs",
    "transcribe-rs/onnx",
    "transcribe-rs/whisper-cpp",
    "transcribe-rs/whisper-vulkan",
    "transcribe-rs/ort-directml",
]
# Back-compat alias.
whisper = ["engines"]
# REQUIRED for release/standalone builds: makes the app load the EMBEDDED
# frontend via the custom protocol instead of the dev-server URL. Without it
# a `cargo build --release` run still points at http://localhost:1430.
# `tauri build` enables this automatically; bare `cargo build` does not.
custom-protocol = ["tauri/custom-protocol"]
